--- a/Lab4_Bai6/Lab4_Bai6.csproj
+++ b/Lab4_Bai6/Lab4_Bai6.csproj
@@ -80,6 +80,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnGiGio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnGiGio.Designer.cs">
+      <DependentUpon>AnGiGio.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,9 @@
     <Compile Include="ThemMonAn.Designer.cs">
       <DependentUpon>ThemMonAn.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AnGiGio.resx">
+      <DependentUpon>AnGiGio.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
